--- a/templates/nurse.html
+++ b/templates/nurse.html
@@ -1,4 +1,11 @@
 <h1>
     hello nurses
+    {{nurse.as_p}}
 </h1>
-{{patient}}
+{% for patient in patients %}
+<div>
+    <h2>
+        
+    </h2>
+</div>
+{% endfor %}
